# notes

./: .gitignore  README.md
_learning/: index.md
adr/: index.md
algorithms/: big-o-notation.md  common-data-structures.md  index.md
architecture/: c4.md  diagramming.md  melkey.md
aws/: certification.md  cli.md  cloud_formation.md  index.md  key_services.md  networking.md  sam.md  security-and-identity.md  serverless.md  strategy.md
c/: README.md  coen10.md  coen11.md  compiling.md  makefiles.md
ceh/: index.md
chatgpt/: markdown_generation.md
clean/: index.md  solid.md
curl/: index.md
database/: normalization.md
diagrams/: index.md  mermaid.md
docker/: README.md  go.mod  main.go  redis.md
eda/: _index.md
git/: README.md  amend.md  pull-rebase.md  udpate-submodule.md
github/: cli.md  create.md  index.md
go/: README.md  bdd.md  generics.md  godoc.md  gorrilla-mux.md  interview.md  monorepo.md  openapi-toolkit.md  projects.md  structure.md  testing.md  tools.md
html/: _index.md
hugo/: index.md
iac/: README.md
javascript/: index.md
kubernetes/: README.md
lang/: README.md
lua/: index.md
pytest/: bdd.md  (+2 more)
python/notebooks/marimo-nb/: .gitignore  generate_docker_compose.py  mypi.ini  pyproject.toml  tasks.py
python/notebooks/marimo-nb/marimo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/notebooks/marimo-nb/marimo_nb/: connect.py  constants.py
python/notebooks/marimo-nb/marimo_nb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/notebooks/marimo-nb/notebooks/: docker.py  normalization.py  postgres.py  test_haven.py
(+347 files in other folders)
